# cantina_common

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/cant/: CantinaException.hpp  formatting.hpp  info.hpp  memory.hpp  types.hpp
include/cant/common/: CantinaException.hpp  CantinaException.inl  config.hpp  formatting.hpp  functor.hpp  impl.hpp  info.hpp  macro.hpp  maths.hpp  memory.hpp  option.hpp  traits.hpp  types.hpp  undef_macro.hpp
include/cant/event/: Listen.hpp  event.hpp  event_forward.hpp
include/cant/maths/: algo.hpp  approx.hpp  maths.hpp  utils.hpp
include/cant/maths/algebra/: Vector.hpp  algebra.hpp
include/cant/maths/geometry/: Rectangle.hpp  geometry.hpp
include/cant/maths/interpolation/: BrokenLinesInterpolation.hpp  InterpolationOneD.hpp  interpolation.hpp  interpolation.inl
include/cant/maths/physics/: MagnetisedFunction.hpp
include/cant/maths/polynomial/: PackedPolynomial.hpp  polynomial.hpp
include/cant/pan/: Cloneable.hpp  PantoufleException.hpp  Time.hpp  types.hpp
include/cant/pan/common/: Cloneable.hpp  MidiEvent.hpp  MidiTimer.hpp  PantoufleException.hpp  PantoufleException.inl  Time.hpp  types.hpp
include/cant/pattern/: Event.hpp  Property.hpp  Slider.hpp
include/cant/patterns/: Event.hpp  Property.hpp  Slider.hpp
include/cant/physics/: CollisionDetector.hpp  CollisionObject.hpp  CollisionSolver.hpp  CustomForceField.hpp  DynamicObject.hpp  Flags.hpp  HookSpringLink.hpp  HookeSpringLink.hpp  IsotropicPullField.hpp  Kinetic.hpp  KineticObject.hpp  KineticState.hpp  KineticUpdater.hpp  LeapfrogUpdater.hpp  Movable.hpp  PhysicalAppliedForce.hpp  PhysicalCollider.hpp  PhysicalCollision.hpp  PhysicalForce.hpp  PhysicalForceField.hpp  PhysicalObject.hpp  PhysicalShape.hpp  PhysicalState.hpp  PhysicsSimulation.hpp  Positionable.hpp  RigidObject.hpp  Rigidbody.hpp  StaticObject.hpp  StaticPhysicalLink.hpp  UniformForceField.hpp  WeakRefPhysicalForce.hpp
include/cant/reka/common/: conversions.hpp  types.hpp
include/cant/time/: Clock.hpp  CustomExternalClock.hpp  InternalClock.hpp  SystemExternalClock.hpp  time.hpp
include/cant/time/common/: types.hpp
inline/cant/common/: CantinaException.inl
inline/cant/event/: Listen.inl
inline/cant/maths/: algo.inl  approx.inl  utils.inl
inline/cant/maths/algebra/: Vector.inl
inline/cant/maths/geometry/: Rectangle.inl
inline/cant/maths/interpolation/: BrokenLinesInterpolation.inl  InterpolationOneD.inl
inline/cant/maths/physics/: MagnetisedFunction.inl
inline/cant/maths/polynomial/: PackedPolynomial.inl
inline/cant/pan/common/: PantoufleException.inl
inline/cant/pattern/: Event.inl  Property.inl  Slider.inl
inline/cant/patterns/: Event.inl  Property.inl  Slider.inl
inline/cant/physics/: CollisionDetector.inl  CollisionObject.inl  CollisionSolver.inl  CustomForceField.inl  DynamicObject.inl  HookSpringLink.inl  HookeSpringLink.inl  IsotropicPullField.inl  KineticObject.inl  KineticState.inl  KineticUpdater.inl  LeapfrogUpdater.inl  PhysicalAppliedForce.inl  PhysicalCollider.inl  PhysicalCollision.inl  PhysicalForce.inl  PhysicalForceField.inl  PhysicalObject.inl  PhysicalShape.inl  PhysicalState.inl  PhysicsSimulation.inl  RigidObject.inl  Rigidbody.inl  StaticObject.inl  StaticPhysicalLink.inl  UniformForceField.inl  WeakRefPhysicalForce.inl
inline/cant/reka/common/: conversions.inl
inline/cant/time/: Clock.inl  CustomExternalClock.inl  InternalClock.inl  SystemExternalClock.inl
source/cant/common/: CantinaException.cpp
source/cant/pan/: Time.cpp
source/cant/pan/common/: MidiTimer.cpp  Time.cpp
